--- a/style.css
+++ b/style.css
@@ -56,6 +56,12 @@ body {
 	padding: 18px;
 	border-radius: 12px;
 	margin-bottom: 1em;
+	
+	overflow-wrap: break-word;
+	word-wrap: break-word;
+	-ms-word-break: break-all;
+	word-break: break-all;
+	word-break: break-word;
 }
 
 .message.me {
