--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 body {
 	font-family: sans-serif;
+	margin: 0;
 }
 
 .chat-ui {
 	display: grid;
 	height: 100vh;
 	width: 100vw;
-	grid-template-columns: 20% auto;
-	grid-template-rows: auto 20%;
+	grid-template-columns: 30% auto;
+	grid-template-rows: auto 25%;
 }
 
 .chats {
