--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*, *:before, *:after {
+	box-sizing: border-box;
+}
+
 body {
 	font-family: sans-serif;
 	margin: 0;
@@ -75,4 +79,119 @@ body {
 
 .login-form {
 	text-align: center;
+}
+
+.new-chat-button-wrapper {
+	text-align: center;
+	padding: 12px;
+}
+
+.new-chat-modal .backdrop {
+	position: absolute;
+	top: 0; left: 0; bottom: 0; right: 0;
+	background-color: hsla(0, 0%, 0%, 0.5);
+}
+
+.modal {
+	position: fixed;
+	top: 50%; left: 50%;
+	transform: translateX(-50%) translateY(-50%);
+	width: 600px;
+	max-width: 100%;
+	height: 800px;
+	max-height: 100%;
+}
+
+.modal__body {
+	position: absolute;
+	top: 2.5rem;
+	left: 0;
+	bottom: 2.5rem;
+	width: 100%;
+	/*height: 100%;*/
+	padding: 0 20px;
+	overflow: auto;
+	background-color: white;
+}
+
+.modal__header {
+	background: #EEE;
+	font-weight: bold;
+	height: 2.5rem;
+	display: flex;
+	align-items: center;
+	padding: 0 20px;
+}
+
+.modal__footer {
+	position: absolute;
+	bottom: 0px;
+	height: 2.5rem;
+	width: 100%;
+	background: #EEE;
+	text-align: right;
+	display: flex;
+	justify-content: flex-end;
+	align-items: center;
+	padding: 0 20px;
+}
+
+.user-select {
+	width: 100%;
+	border: 1px solid #CCC;
+	border-radius: 5px;
+	padding: 8px;
+	margin: 0.5rem 0;
+}
+
+.user-select .name {
+	font-weight: bold;
+}
+
+.user-select .username {
+	font-size: 0.8em;
+}
+
+.checkmark {
+	position: relative;
+	height: 25px;
+	width: 25px;
+	background-color: #eee;
+	float: left;
+	margin-right: 0.5em;
+}
+
+/* On mouse-over, add a grey background color */
+.user-select:hover .checkmark {
+	background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkmark.checked {
+	background-color: #2196F3;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+	content: "";
+	position: absolute;
+	display: none;
+}
+
+/* Show the checkmark when checked */
+.checkmark.checked:after {
+	display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkmark:after {
+	left: 9px;
+	top: 3px;
+	width: 8px;
+	height: 16px;
+	border: solid white;
+	border-width: 0 3px 3px 0;
+	-webkit-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	transform: rotate(45deg);
 }
